--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fullcalendar/angular": "^6.1.9",
+    "@tensorflow/tfjs": "^4.16.0",
+    "@tensorflow/tfjs-core": "^1.7.0",
+    "@types/webgl2": "^0.0.10",
     "angular-calendar": "^0.31.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "date-fns": "^2.30.0",
+    "face-api.js": "^0.22.2",
     "fullcalendar": "^6.1.9",
     "rxjs": "~7.8.0",
+    "speech-synthesis": "^0.3.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
